# ankaios

./: .editorconfig  .gitignore  .markdownlint.yml  404.html  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Makefile  NOTICE.md  README.md  SECURITY.md  about.hbs  about.toml  configs_cases.md  deny.toml  index.html  justfile  nextest.toml  sitemap.xml  sonar-project.properties  versions.json
agent/: Cargo.toml
agent/config/: ank-agent.conf
agent/doc/swdesign/: README.md
agent/src/: agent_config.rs  agent_manager.rs  cli.rs  control_interface.rs  dependency_manager.rs  dependency_scheduler.rs  generic_polling_state_checker.rs  main.rs  parameter_storage.rs  resource_monitor.rs  runtime.rs  runtime_adapter.rs  runtime_facade.rs  runtime_manager.rs  state_checker.rs  stoppable_state_checker.rs  subscription_store.rs  workload.rs  workload_channel.rs  workload_facade.rs  workload_factory.rs  workload_id.rs  workload_log_facade.rs  workload_operation.rs  workload_state_sender.rs  workload_trait.rs
agent/src/config_files/: config_file_creator.rs  config_files_path.rs  mod.rs  workload_files_creator.rs  workload_files_path.rs
agent/src/control_interface/: authorizer.rs  control_interface_api.rs  control_interface_info.rs  control_interface_path.rs  control_interface_task.rs  directory.rs  execution_command_channels.rs  fifo.rs  filesystem.rs  from_server_channels.rs  input_output.rs  input_pipe.rs  mod.rs  output_pipe.rs  pipes_channel_context.rs  pipes_channel_context_info.rs  pipes_channel_task.rs  reopen_file.rs  to_ankaios.rs
agent/src/io_utils/: dir_utils.rs  directory.rs  fs.rs  mod.rs
agent/src/podman/: cli_command.rs  kube_config.rs  mod.rs  podman_adapter.rs  podman_cli.rs  podman_kube_runtime.rs  podman_kube_runtime_config.rs  podman_runtime.rs  podman_runtime_config.rs  podman_utils.rs  runtime_config.rs  workload.rs
agent/src/resource_measurement/: mod.rs  resource_measurement_sender  resource_measurement_sender.rs
agent/src/runtime_connectors/: cli_command.rs  dummy_state_checker.rs  generic_log_collector.rs  log_channel.rs  log_collector.rs  log_collector_subscription.rs  log_picker.rs  mod.rs  podman_cli.rs  runtime_connector.rs  runtime_facade.rs  state_checker.rs  unsupported_runtime.rs
agent/src/test_helper/: mod.rs
agent/src/workload/: config_files_path.rs  control_loop_state.rs  mod.rs  retry_manager.rs  workload.rs  workload_command_channel.rs  workload_command_queue.rs  workload_control_loop.rs  workload_loop.rs
agent/src/workload_files/: mod.rs  workload_files_creator.rs  workload_files_path.rs
agent/src/workload_queue/: mod.rs  workload_command_channel.rs  workload_command_queue.rs
agent/src/workload_scheduler/: dependency_state_validator.rs  mod.rs  scheduler.rs  state_validator.rs  workload_operation_state.rs  workload_queue.rs
agent/src/workload_state/: mod.rs  workload_state_db.rs  workload_state_proxy.rs  workload_state_regulator.rs  workload_state_sender.rs  workload_state_store.rs
ank/: Cargo.toml
ank/config/: ank.conf
ank/doc/swdesign/: README.md
ank/src/: ank_config.rs  cli.rs  cli_commands.rs  cli_error.rs  cli_signals.rs  filtered_complete_state.rs  log.rs  main.rs
ank/src/cli_commands/: agent_table_row.rs  ank_table.rs  apply_manifests.rs  cli_table.rs  config_table_row.rs  delete_configs.rs  delete_workloads.rs  dry_run_plan.rs  get_agents.rs  get_configs.rs  get_events.rs  get_logs.rs  get_state.rs  get_workload_table_display.rs  get_workloads.rs  inspect.rs  keygen.rs  run_workload.rs  server_connection.rs  set_state.rs  sign.rs  table_builder.rs  verify.rs  wait_list.rs  wait_list_display.rs  workload_table.rs  workload_table_row.rs
ank_schema/: Cargo.toml  README.md  build.rs
ank_schema/doc/swdesign/: README.md
ank_schema/examples/: example_manifest.ank.yml  manifest.ank.yml  test_manifest.ank.yml
ank_schema/schemas/: ank-schema.json  ank_schema.json
ank_schema/src/: lib.rs  main.rs
ankaios_api/: Cargo.toml  build.rs  common_constants.rs
ankaios_api/doc/swdesign/: README.md
ankaios_api/proto/: ank_base.proto  control_api.proto
ankaios_api/src/: helpers.rs  lib.rs  test_utils.rs
ankaios_api/src/ank_base/: complete_state.rs  control_interface_access.rs  mod.rs  requests.rs  workload.rs  (+3 more)
api/: Cargo.toml  build.rs
api/doc/: README.md
api/proto/: ank_base.proto  ank_proto.proto  ankaios.proto  control_api.proto  control_interface_api.proto  grpc_api.proto
api/src/: convert.rs  helpers.rs  lib.rs  test_utils.rs
common/: Cargo.toml
common/src/: cli_utils.rs  commands.rs  communications_client.rs  communications_error.rs  communications_server.rs  config.rs  execution_interface.rs  from_server_interface.rs  graceful_exit.rs  helpers.rs  lib.rs  message_size.rs  path_security.rs  pem_utils.rs  request_id_prepending.rs  secure_io.rs  state_change_interface.rs  state_manipulation.rs  test_utils.rs  to_server_interface.rs
common/tests/: canonical_tests.rs
examples/rust_control_interface/: Cargo.toml  Dockerfile  README.md  manifest.yaml  startupState.yaml
examples/rust_sdk_hello/: Cargo.toml  Dockerfile  README.md  manifest.yaml
examples/rust_sdk_logging/: Cargo.toml  Dockerfile  README.md  manifest.yaml  startupState.yaml
grpc/: .gitignore  Cargo.toml  build.rs
grpc/proto/: grpc_api.proto
grpc/src/: agent_senders_map.rs  client.rs  client_senders_map.rs  execution_command_proxy.rs  from_server_proxy.rs  grpc_agent_connection.rs  grpc_api.rs  grpc_cli_connection.rs  grpc_commander_connection.rs  grpc_middleware_error.rs  lib.rs  proxy_error.rs  server.rs  state_change_proxy.rs  to_server_proxy.rs
grpc/tests/: grpc_test.rs
server/: Cargo.toml
server/config/: ank-server.conf  state.yaml
server/resources/: startConfig.yaml
server/src/: ankaios_server.rs  cli.rs  main.rs  server_config.rs  server_state.rs  signature_validator.rs  state_manipulation.rs  state_parser.rs  workload_state_db.rs
spec_macros/: Cargo.toml  README.md
spec_macros/src/: derive_spec.rs  fix_enum_serialization.rs  lib.rs  utils.rs
spec_macros/tests/: tests.rs
(+1083 files in other folders)
