[package]
name = "ank-agent"
version = "0.7.0-pre"
edition = "2024"
license = "Apache-2.0"
description = "Eclipse Ankaios agent component"
documentation = "https://eclipse-ankaios.github.io/ankaios"
authors = ["Elektrobit Automotive GmbH and Ankaios contributors"]
repository = "https://github.com/eclipse-ankaios/ankaios"

[dependencies]
api = { path = "../api" }
base64 = "0.22"
common = { path = "../common" }
grpc = { path = "../grpc" }
prost = "0.14"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "process",
    "signal",
] }
nix = { version = "0.30", features = ["fs", "user"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
serde_json = "1.0"
toml = "0.9"
sha256 = "1.5"
umask = "2.1.0"
sysinfo = "0.36"
regex = "1.10"
rand = "0.9.0"
bytes = "1.10.1"

[dev-dependencies]
common = { path = "../common", features = ["test_utils"] }
tempfile = "3.4"
mockall = "0.11"
mockall_double = "0.3"
lazy_static = "1.4"
semver = "1.0"
