[package]
name = "ank"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
authors.workspace = true
repository.workspace = true

[package.metadata.deb]
name = "ankaios"
copyright = "Copyright (c) 2023 Elektrobit Automotive GmbH"
assets = [
    ["target/release/ank", "usr/bin/", "755"],
    ["target/release/ank-server", "usr/bin/", "755"],
    ["target/release/ank-agent", "usr/bin/", "755"],
    ["../README.md", "usr/share/doc/ankaios/README", "644"],
]

[dependencies]
api = { path = "../api" }
common = { path = "../common" }
grpc = { path = "../grpc" }
clap = { version = "4.0", features = ["derive", "env"] }
tokio = { version = "1.28", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "process",
    "signal",
] }
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tabled = "0.12"
uuid = { version = "1.7.0", features = ["v4"] }
crossterm = "0.27.0"

[dev-dependencies]
mockall = "0.11"
common = { path = "../common", features = ["test_utils"] }
mockall_double = "0.3"
