[package]
name = "ank"
version = "1.0.0"
edition = "2024"
license = "Apache-2.0"
description = "The CLI of Eclipse Ankaios"
documentation = "https://eclipse-ankaios.github.io/ankaios"
authors = ["Elektrobit Automotive GmbH and Ankaios contributors"]
repository = "https://github.com/eclipse-ankaios/ankaios"

[package.metadata.deb]
name = "ankaios"
copyright = "Copyright (c) 2023 Elektrobit Automotive GmbH"
assets = [
    [
        "target/release/ank",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/ank-server",
        "usr/bin/",
        "755",
    ],
    [
        "target/release/ank-agent",
        "usr/bin/",
        "755",
    ],
    [
        "../README.md",
        "usr/share/doc/ankaios/README",
        "644",
    ],
]

[dependencies]
ankaios-api = { path = "../ankaios_api" }
common = { path = "../common" }
grpc = { path = "../grpc" }
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "process",
    "signal",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tabled = "0.17"
tempfile = "3.17"
toml = "0.9"
uuid = { version = "1.7.0", features = ["v4"] }
crossterm = "0.29.0"
clap_complete = { version = "4.5", features = ["unstable-dynamic"] }
once_cell = "1.10"

[dev-dependencies]
ankaios-api = { path = "../ankaios_api", features = ["test_utils"] }
common = { path = "../common", features = ["test_utils"] }
mockall = "0.11"
mockall_double = "0.3"
