[package]
name = "ank-schema"
version = "0.8.0-pre"
edition = "2024"
license = "Apache-2.0"
description = "Eclipse Ankaios schema generating component"
documentation = "https://eclipse-ankaios.github.io/ankaios"
authors = ["Elektrobit Automotive GmbH and Ankaios contributors"]
repository = "https://github.com/eclipse-ankaios/ankaios"

[dependencies]
api = { path = "../api", features = ["test_utils"] }
serde_json = "1.0"
schemars = "1.0"
