[package]
name = "api"
version = "0.8.0-pre"
edition = "2024"
license = "Apache-2.0"
description = "API definition for Eclipse Ankaios"
documentation = "https://eclipse-ankaios.github.io/ankaios"
authors = ["Elektrobit Automotive GmbH and Ankaios contributors"]
repository = "https://github.com/eclipse-ankaios/ankaios"

[dependencies]
internal_derive_macros = { path = "../internal_derive_macros" }
prost = "0.14"
tonic = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
sha256 = "1.5"
regex = "1.10"
semver = "1.0"
log = "0.4"

[build-dependencies]
tonic-prost-build = "0.14"

[features]
default = []
test_utils = []
