[package]
name = "common"
version = "0.8.0-pre"
edition = "2024"
license = "Apache-2.0"
description = "Common containers and utilities for Eclipse Ankaios"
documentation = "https://eclipse-ankaios.github.io/ankaios"
authors = ["Elektrobit Automotive GmbH and Ankaios contributors"]
repository = "https://github.com/eclipse-ankaios/ankaios"

[dependencies]
api = { path = "../api", features = ["test_utils"]}
async-trait = "0.1"
tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "process",
] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
sha256 = "1.5"
semver = "1.0"
regex = "1.10"
toml = "0.9"

[features]
default = []
test_utils = []
