[package]
name = "grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
api = { package = "api", version = "0", path = "../api" }
common = { package = "common", version = "0", path = "../common" }
tonic = "0.9"
prost = "0.11"
async-trait = "0.1"
tokio = { version = "1.28", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "process",
] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
url = "2.3"
uuid = { version = "1.3", features = ["v4", "fast-rng"] }

[dev-dependencies]
common = { package = "common", version = "0.1", path = "../common", features = [
    "test_utils",
] }
mockall = "0.11"
mockall_double = "0.3"
futures-util = "0.3"

[lib]
name = "grpc"
path = "src/lib.rs"

[[test]]
name = "grpc_test"
path = "tests/grpc_test.rs"
