[package]
name = "grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
documentation.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
api = { path = "../api" }
common = { path = "../common" }
tonic = {version="0.9", features= ["tls"]}
prost = "0.11"
async-trait = "0.1"
tokio = { version = "1.28", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "process",
] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
uuid = { version = "1.3", features = ["v4", "fast-rng"] }
x509-parser = "0.16"
regex = "1.10"

[dev-dependencies]
common = { path = "../common", features = ["test_utils"] }
mockall = "0.11"
mockall_double = "0.3"
futures-util = "0.3"

[build-dependencies]
tonic-build = "0.9"

[lib]
name = "grpc"
path = "src/lib.rs"

[[test]]
name = "grpc_test"
path = "tests/grpc_test.rs"
