[package]
name = "grpc"
version = "0.5.0"
edition = "2021"
license = "Apache-2.0"
description = "A gRPC communication middleware for Eclipse Ankaios"
documentation = "https://eclipse-ankaios.github.io/ankaios"
authors = ["Elektrobit Automotive GmbH and Ankaios contributors"]
repository = "https://github.com/eclipse-ankaios/ankaios"

[dependencies]
api = { path = "../api" }
common = { path = "../common" }
tonic = {version="0.9", features= ["tls"]}
prost = "0.11"
async-trait = "0.1"
tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "process",
] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
uuid = { version = "1.3", features = ["v4", "fast-rng"] }
x509-parser = "0.16"
regex = "1.10"

[dev-dependencies]
common = { path = "../common", features = ["test_utils"] }
tempfile = "3.10"
env_logger = "0.11"

[build-dependencies]
tonic-build = "0.9"

[lib]
name = "grpc"
path = "src/lib.rs"

[[test]]
name = "grpc_test"
path = "tests/grpc_test.rs"
