[package]
name = "ank-server"
version = "0.4.0"
edition = "2021"
license = "Apache-2.0"
description = "Eclipse Ankaios server component"
documentation = "https://eclipse-ankaios.github.io/ankaios"
authors = ["Elektrobit Automotive GmbH and Ankaios contributors"]
repository = "https://github.com/eclipse-ankaios/ankaios"

[dependencies]
api ={ path = "../api" }
common = { path = "../common" }
grpc = { path = "../grpc" }
log = "0.4"
env_logger = "0.10"
async-trait = "0.1"
tokio = { version = "1.28", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "process",
] }
tokio-stream = "0.1"
nix = { version = "0.26", features = ["fs"] }
tonic = "0.9"
async-stream = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive", "env"] }

[dev-dependencies]
common = { path = "../common", features = ["test_utils"] }
serde_json = "1.0"
rand = "0.8.5"
mockall = "0.11"
mockall_double = "0.3"
