[package]
name = "ank-server"
version = "0.5.0-pre"
edition = "2021"
license = "Apache-2.0"
description = "Eclipse Ankaios server component"
documentation = "https://eclipse-ankaios.github.io/ankaios"
authors = ["Elektrobit Automotive GmbH and Ankaios contributors"]
repository = "https://github.com/eclipse-ankaios/ankaios"

[dependencies]
api ={ path = "../api" }
common = { path = "../common" }
grpc = { path = "../grpc" }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "process",
] }
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive", "env"] }
handlebars = "6.1.0"

[dev-dependencies]
common = { path = "../common", features = ["test_utils"] }
mockall = "0.11"
mockall_double = "0.3"
