[package]
name = "control_interface_example"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { package = "api", version = "0", path = "api" }
chrono = "0.4"
# required for encoding/decoding of probuf varint format
prost = "0.11"

# required for async/await
tokio = { version = "1.28", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "process",
    "signal"
] }
