[package]
name = "control_interface_example"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { package = "api", path = "api" }
chrono = "0.4"
# required for encoding/decoding of probuf varint format
prost = "0.11"
