[package]
name = "rust_sdk_hello"
edition = "2024"
license = "Apache-2.0"

[dependencies]
ankaios_sdk = "*"
chrono = "0.4"
# required for encoding/decoding of protobuf varint format
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.41", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "process",
] }
