[package]
name = "basic_persistency"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# Standalone workspace (not part of parent Ankaios workspace)
[workspace]

[dependencies]
ankaios-api = { path = "../../../ankaios_api" }
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time"] }
tokio-stream = "0.1"
prost = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
