[package]
name = "control_interface_tester"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { package = "api", path = "../../../api" }
common = { package = "common", path = "../../../common" }
chrono = "0.4"
# required for encoding/decoding of probuf varint format
prost = "0.11"
serde = "1.0"
serde_yaml = "0.9"
serde_json = "1.0.121"
